<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:stretchColumns="1" >

    <TableRow android:gravity="center" >

        <TextView
            android:id="@+id/kanji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kanji"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/points"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow android:gravity="center" >

        <Button
            android:id="@+id/k1"
            android:layout_width="150dp"
            android:layout_height="92dp"
            android:layout_margin="5dp"
            android:background="@drawable/kanji1" >
        </Button>
    </TableRow>

    <TableRow android:gravity="center" >

        <EditText
            android:id="@+id/util"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:textColor="#000000"
            android:hint="@string/indications"
            android:imeOptions="actionDone"
            android:textSize="20dp" >

        </EditText>
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="@string/menu"
            android:textSize="15dp" />

        <ImageButton
            android:id="@+id/ok"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_gravity="right"
            android:background="@null"
            android:contentDescription="@string/ok"
            android:src="@drawable/ok_display" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />
    </TableRow>

</TableLayout>