<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="10dp"
    android:gravity="center"
    android:stretchColumns="1" >

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/kanji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/kanji"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:textStyle="bold" />

    </TableRow>


    <TableRow android:gravity="center" >

        <Button
            android:id="@+id/signi_rep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:text="@string/rep"
            android:textColor="#000000"
            android:textSize="15dp" >

        </Button>
    </TableRow>
    
    <TableRow android:gravity="center" >

        <Button
            android:id="@+id/signi_k1"
            android:layout_width="65dp"
                android:layout_height="65dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/blank"
             >

        </Button>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left" >

        <Button
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/menu"
            android:textSize="15dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/next"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:background="@null"
            android:contentDescription="@string/next"
            android:src="@drawable/next_display"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/ok"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@null"
            android:contentDescription="@string/ok"
            android:src="@drawable/ok_display"
            android:visibility="gone" />
    </TableRow>

</TableLayout>