<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recap"
        android:textColor="#ff5000"
        android:textSize="12dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/recapTxtErr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="13dp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|fill"
            android:gravity="center" >

            <ImageButton
                android:id="@+id/kErr1"
                android:layout_width="65dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="1dip"
                android:background="@drawable/kanji1"
                android:contentDescription="@string/kanji"
                android:textSize="20dp"
                android:visibility="gone" >
            </ImageButton>

            <ImageButton
                android:id="@+id/kErr2"
                android:layout_width="65dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="1dip"
                android:background="@drawable/kanji1"
                android:contentDescription="@string/kanji"
                android:textSize="20dp"
                android:visibility="gone" >
            </ImageButton>

            <ImageButton
                android:id="@+id/kErr3"
                android:layout_width="65dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="1dip"
                android:background="@drawable/kanji1"
                android:contentDescription="@string/kanji"
                android:textSize="20dp"
                android:visibility="gone" />
        </TableRow>

        <TableRow android:gravity="center" >

            <ImageButton
                android:id="@+id/kErr4"
                android:layout_width="65dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="1dip"
                android:background="@drawable/kanji1"
                android:contentDescription="@string/kanji"
                android:textSize="20dp"
                android:visibility="gone" >
            </ImageButton>

            <ImageButton
                android:id="@+id/kErr5"
                android:layout_width="65dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="1dip"
                android:background="@drawable/kanji1"
                android:contentDescription="@string/kanji"
                android:textSize="20dp"
                android:visibility="gone" >
            </ImageButton>

            <ImageButton
                android:id="@+id/kErr6"
                android:layout_width="65dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="1dip"
                android:background="@drawable/kanji1"
                android:contentDescription="@string/kanji"
                android:textSize="20dp"
                android:visibility="gone" >
            </ImageButton>
        </TableRow>

        <TableRow android:gravity="center" >

            <ImageButton
                android:id="@+id/kErr7"
                android:layout_width="65dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="1dip"
                android:background="@drawable/kanji1"
                android:contentDescription="@string/kanji"
                android:textSize="20dp"
                android:visibility="gone" >
            </ImageButton>

            <ImageButton
                android:id="@+id/kErr8"
                android:layout_width="65dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="1dip"
                android:background="@drawable/kanji1"
                android:contentDescription="@string/kanji"
                android:textSize="20dp"
                android:visibility="gone" >
            </ImageButton>

            <ImageButton
                android:id="@+id/kErr9"
                android:layout_width="65dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="1dip"
                android:background="@drawable/kanji1"
                android:contentDescription="@string/kanji"
                android:textSize="20dp"
                android:visibility="gone" >
            </ImageButton>
        </TableRow>

        <TableRow android:layout_gravity="center" >

            <ImageButton
                android:id="@+id/endChoiceErr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/ok"
                android:src="@drawable/ok_display"
                android:text=""
                android:visibility="gone" >
            </ImageButton>

            <ImageButton
                android:id="@+id/nextErr"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/next"
                android:src="@drawable/next_display"
                android:visibility="gone" />
        </TableRow>
    </TableLayout>

</LinearLayout>